# MouseTesterRust

./: .gitignore  .rustfmt.toml  BEHAVIOR_COMPARISON.md  Cargo.toml  GUI_FEATURES.md  GUI_PREVIEW.md  IMPLEMENTATION_SUMMARY.md  PERFORMANCE_IMPROVEMENTS.md  README.md
.cargo/: config.toml
.github/: BUILD_REQUIREMENTS.md
docs/: LOD_MODULE.md  LOD_OPTIMIZATION.md
examples/: lod_analysis.rs  lod_demo.rs
examples/test/: output-20kSensor_1kReport.csv  output-20kSensor_8kReport.csv  output-LowPower_1kReport.csv  output_CordedGaming_4KReport.csv  output_CordedGaming_8KReport.csv
src/: gui.rs  lib.rs  lod.rs  lod_advanced.rs  main.rs  mouse_event.rs
tests/: lod_advanced_integration.rs
