[package]
name = "MouseTesterRust"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
byteorder = "1.5.0"
env = "1.0.1"
hex = "0.4.3"
nalgebra = "0.32"
pcap = "2.3.0"
pcap-parser = "0.17.0"
regex = "1.12.2"
# GUI for in-app plotting (egui/eframe)
# Use `eframe` for the native window. Add plotters + image to render/export plots if needed.
eframe = { version = "0.27", features = ["default"] }
egui = { version = "0.27", features = ["default"] }
egui_plot = "0.27"

# Plotting libraries (static image output/backends)
plotters = "0.3"
plotters-bitmap = "0.3"
image = "0.24"
